--- a/src/posts/2026/2026-01-26-screenie/2026-01-26-screenie.md
+++ b/src/posts/2026/2026-01-26-screenie/2026-01-26-screenie.md
@@ -3,12 +3,12 @@ title: 'Screenie'
 description: "testing the screens"
 date: 2026-01-26
 tags: ['screenie', 'drafts']
-image: '/tiny.png'
+image: './tiny.png'
 alt: 'iPhone mockup with Tiny Theme for Drafts.'
 credit: Tiny Theme
 ---
 
-![iPhone mockup with Tiny Theme for Drafts](/tiny.png)
+![iPhone mockup with Tiny Theme for Drafts](./tiny.png)
 
 
 ## Markdown syntax
